Issue #1167: Create `metricshub-emulation-extension`
Created `AbstractEmulationExecutor` class to handle the common
functionality of the emulation executors.