@@ -21,23 +21,18 @@ package org.metricshub.extension.emulation.jdbc;
  * ╲╱╲╱╲╱╲╱╲╱╲╱╲╱╲╱╲╱╲╱╲╱╲╱╲╱╲╱╲╱╲╱╲╱╲╱╲╱╲╱
  */
 
-import java.io.IOException;
-import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
-import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.metricshub.engine.common.exception.ClientException;
 import org.metricshub.engine.common.helpers.MetricsHubConstants;
 import org.metricshub.engine.strategy.source.SourceTable;
 import org.metricshub.engine.telemetry.TelemetryManager;
+import org.metricshub.extension.emulation.AbstractEmulationExecutor;
 import org.metricshub.extension.emulation.EmulationConfiguration;
 import org.metricshub.extension.emulation.EmulationImageCacheManager;
-import org.metricshub.extension.emulation.EmulationPathHelper;
 import org.metricshub.extension.emulation.EmulationRoundRobinManager;
 import org.metricshub.extension.jdbc.JdbcConfiguration;
 import org.metricshub.extension.jdbc.SqlRequestExecutor;
@@ -46,13 +41,24 @@ import org.metricshub.extension.jdbc.SqlRequestExecutor;
  * SQL request executor that replays query results from recorded emulation files.
  */
 @Slf4j
-@RequiredArgsConstructor
 public class EmulationSqlRequestExecutor extends SqlRequestExecutor {
 
-	private static final String JDBC_EMULATION_YAML = "image.yaml";
+	record SqlContext(String sqlQuery) {}
 
-	private final EmulationRoundRobinManager roundRobinManager;
-	private final EmulationImageCacheManager imageCacheManager;
+	private final AbstractEmulationExecutor executorHelper;
+
+	/**
+	 * Constructs an EmulationSqlRequestExecutor with the given round-robin manager and image cache manager.
+	 *
+	 * @param roundRobinManager Manager for round-robin selection of emulation images
+	 * @param imageCacheManager Cache manager for emulation images to optimize performance
+	 */
+	public EmulationSqlRequestExecutor(
+		final EmulationRoundRobinManager roundRobinManager,
+		final EmulationImageCacheManager imageCacheManager
+	) {
+		executorHelper = new AbstractEmulationExecutor(roundRobinManager, imageCacheManager);
+	}
 
 	@Override
 	public List<List<String>> executeSql(
@@ -80,69 +86,70 @@ public class EmulationSqlRequestExecutor extends SqlRequestExecutor {
 			return List.of();
 		}
 
-		final Path jdbcDir = Path.of(emulationInputDirectory);
-		final Path indexFile = jdbcDir.resolve(JDBC_EMULATION_YAML);
+		return executorHelper.replayFromImage(
+			hostname,
+			emulationInputDirectory,
+			JdbcEmulationImage.class,
+			new SqlContext(sqlQuery),
+			new AbstractEmulationExecutor.ReplayOperations<
+				JdbcEmulationImage,
+				JdbcEmulationEntry,
+				SqlContext,
+				List<List<String>>
+			>() {
+				@Override
+				public String protocolName() {
+					return "JDBC";
+				}
 
-		if (!Files.isRegularFile(indexFile)) {
-			log.warn("Hostname {} - JDBC emulation index file not found: {}", hostname, indexFile);
-			return List.of();
-		}
+				@Override
+				public String describeRequest(final SqlContext context) {
+					return "query '" + context.sqlQuery() + "'";
+				}
 
-		final JdbcEmulationImage emulationImage;
-		try {
-			emulationImage = imageCacheManager.getImage(indexFile, JdbcEmulationImage.class);
-		} catch (IOException e) {
-			log.error(
-				"Hostname {} - Failed to parse JDBC emulation index file {}. Error: {}",
-				hostname,
-				indexFile,
-				e.getMessage()
-			);
-			log.debug("Hostname {} - JDBC emulation index parse error:", hostname, e);
-			return List.of();
-		}
+				@Override
+				public List<JdbcEmulationEntry> extractEntries(final JdbcEmulationImage image) {
+					return image != null ? image.getImage() : Collections.emptyList();
+				}
 
-		final List<JdbcEmulationEntry> entries = emulationImage != null
-			? emulationImage.getImage()
-			: Collections.emptyList();
+				@Override
+				public List<JdbcEmulationEntry> findMatchingEntries(
+					final List<JdbcEmulationEntry> entries,
+					final SqlContext context
+				) {
+					return EmulationSqlRequestExecutor.this.findMatchingEntries(entries, context.sqlQuery());
+				}
 
-		final List<JdbcEmulationEntry> matchingEntries = findMatchingEntries(entries, sqlQuery);
-		if (matchingEntries.isEmpty()) {
-			log.warn("Hostname {} - No matching JDBC emulation entry found for query '{}'.", hostname, sqlQuery);
-			return List.of();
-		}
+				@Override
+				public String buildRequestKey(final SqlContext context) {
+					return context.sqlQuery();
+				}
 
-		final int index = roundRobinManager.nextIndex(
-			indexFile.toAbsolutePath().toString(),
-			sqlQuery,
-			matchingEntries.size()
+				@Override
+				public String extractResponseFileName(final JdbcEmulationEntry entry) {
+					return entry.getResponse();
+				}
+
+				@Override
+				public List<List<String>> mapResponse(final String content) {
+					return SourceTable.csvToTable(content, MetricsHubConstants.TABLE_SEP);
+				}
+
+				@Override
+				public List<List<String>> emptyResult() {
+					return List.of();
+				}
+			}
 		);
-
-		final String responseFileName = matchingEntries.get(index).getResponse();
-		if (responseFileName == null || responseFileName.isBlank()) {
-			log.warn("Hostname {} - Matched JDBC emulation entry has no response file.", hostname);
-			return List.of();
-		}
-
-		final Path responseFile = EmulationPathHelper.resolveSecurely(jdbcDir, responseFileName);
-		if (responseFile == null) {
-			return List.of();
-		}
-		try {
-			final String content = Files.readString(responseFile, StandardCharsets.UTF_8);
-			return SourceTable.csvToTable(content, MetricsHubConstants.TABLE_SEP);
-		} catch (Exception e) {
-			log.error(
-				"Hostname {} - Failed to read JDBC emulation response file {}. Error: {}",
-				hostname,
-				responseFile,
-				e.getMessage()
-			);
-			log.debug("Hostname {} - JDBC emulation response read error:", hostname, e);
-			return List.of();
-		}
 	}
 
+	/**
+	 * Finds emulation entries that match the given SQL query.
+	 *
+	 * @param entries   list of emulation entries to search
+	 * @param sqlQuery  SQL query to match against the entries
+	 * @return list of matching emulation entries, or an empty list if no matches are found
+	 */
 	List<JdbcEmulationEntry> findMatchingEntries(final List<JdbcEmulationEntry> entries, final String sqlQuery) {
 		if (entries == null || entries.isEmpty()) {
 			return List.of();
