@@ -21,23 +21,18 @@ package org.metricshub.extension.emulation.wbem;
  * ╲╱╲╱╲╱╲╱╲╱╲╱╲╱╲╱╲╱╲╱╲╱╲╱╲╱╲╱╲╱╲╱╲╱╲╱╲╱╲╱
  */
 
-import java.io.IOException;
-import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
-import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.metricshub.engine.common.exception.ClientException;
 import org.metricshub.engine.common.helpers.MetricsHubConstants;
 import org.metricshub.engine.strategy.source.SourceTable;
 import org.metricshub.engine.telemetry.TelemetryManager;
+import org.metricshub.extension.emulation.AbstractEmulationExecutor;
 import org.metricshub.extension.emulation.EmulationConfiguration;
 import org.metricshub.extension.emulation.EmulationImageCacheManager;
-import org.metricshub.extension.emulation.EmulationPathHelper;
 import org.metricshub.extension.emulation.EmulationRoundRobinManager;
 import org.metricshub.extension.wbem.WbemConfiguration;
 import org.metricshub.extension.wbem.WbemRequestExecutor;
@@ -46,13 +41,23 @@ import org.metricshub.extension.wbem.WbemRequestExecutor;
  * WBEM request executor that replays query results from recorded emulation files.
  */
 @Slf4j
-@RequiredArgsConstructor
 public class EmulationWbemRequestExecutor extends WbemRequestExecutor {
 
-	private static final String WBEM_EMULATION_YAML = "image.yaml";
+	record WbemContext(String query, String namespace) {}
 
-	private final EmulationRoundRobinManager roundRobinManager;
-	private final EmulationImageCacheManager imageCacheManager;
+	private final AbstractEmulationExecutor executorHelper;
+
+	/**
+	 * Constructs an EmulationWbemRequestExecutor with the given round-robin manager and image cache manager.
+	 * @param roundRobinManager Manager for round-robin selection of emulation images
+	 * @param imageCacheManager Cache manager for emulation images to optimize performance
+	 */
+	public EmulationWbemRequestExecutor(
+		final EmulationRoundRobinManager roundRobinManager,
+		final EmulationImageCacheManager imageCacheManager
+	) {
+		executorHelper = new AbstractEmulationExecutor(roundRobinManager, imageCacheManager);
+	}
 
 	@Override
 	public List<List<String>> executeWbem(
@@ -81,75 +86,71 @@ public class EmulationWbemRequestExecutor extends WbemRequestExecutor {
 			return List.of();
 		}
 
-		final Path wbemDir = Path.of(emulationInputDirectory);
-		final Path indexFile = wbemDir.resolve(WBEM_EMULATION_YAML);
+		return executorHelper.replayFromImage(
+			hostname,
+			emulationInputDirectory,
+			WbemEmulationImage.class,
+			new WbemContext(query, namespace),
+			new AbstractEmulationExecutor.ReplayOperations<
+				WbemEmulationImage,
+				WbemEmulationEntry,
+				WbemContext,
+				List<List<String>>
+			>() {
+				@Override
+				public String protocolName() {
+					return "WBEM";
+				}
 
-		if (!Files.isRegularFile(indexFile)) {
-			log.warn("Hostname {} - WBEM emulation index file not found: {}", hostname, indexFile);
-			return List.of();
-		}
+				@Override
+				public String describeRequest(final WbemContext context) {
+					return "query '" + context.query() + "' and namespace '" + context.namespace() + "'";
+				}
 
-		final WbemEmulationImage emulationImage;
-		try {
-			emulationImage = imageCacheManager.getImage(indexFile, WbemEmulationImage.class);
-		} catch (IOException e) {
-			log.error(
-				"Hostname {} - Failed to parse WBEM emulation index file {}. Error: {}",
-				hostname,
-				indexFile,
-				e.getMessage()
-			);
-			log.debug("Hostname {} - WBEM emulation index parse error:", hostname, e);
-			return List.of();
-		}
+				@Override
+				public List<WbemEmulationEntry> extractEntries(final WbemEmulationImage image) {
+					return image != null ? image.getImage() : Collections.emptyList();
+				}
 
-		final List<WbemEmulationEntry> entries = emulationImage != null
-			? emulationImage.getImage()
-			: Collections.emptyList();
+				@Override
+				public List<WbemEmulationEntry> findMatchingEntries(
+					final List<WbemEmulationEntry> entries,
+					final WbemContext context
+				) {
+					return EmulationWbemRequestExecutor.this.findMatchingEntries(entries, context.query(), context.namespace());
+				}
 
-		final List<WbemEmulationEntry> matchingEntries = findMatchingEntries(entries, query, namespace);
-		if (matchingEntries.isEmpty()) {
-			log.warn(
-				"Hostname {} - No matching WBEM emulation entry found for query '{}' and namespace '{}'.",
-				hostname,
-				query,
-				namespace
-			);
-			return List.of();
-		}
+				@Override
+				public String buildRequestKey(final WbemContext context) {
+					return context.query() + "|" + context.namespace();
+				}
 
-		final String requestKey = query + "|" + namespace;
-		final int index = roundRobinManager.nextIndex(
-			indexFile.toAbsolutePath().toString(),
-			requestKey,
-			matchingEntries.size()
+				@Override
+				public String extractResponseFileName(final WbemEmulationEntry entry) {
+					return entry.getResponse();
+				}
+
+				@Override
+				public List<List<String>> mapResponse(final String content) {
+					return SourceTable.csvToTable(content, MetricsHubConstants.TABLE_SEP);
+				}
+
+				@Override
+				public List<List<String>> emptyResult() {
+					return List.of();
+				}
+			}
 		);
-
-		final String responseFileName = matchingEntries.get(index).getResponse();
-		if (responseFileName == null || responseFileName.isBlank()) {
-			log.warn("Hostname {} - Matched WBEM emulation entry has no response file.", hostname);
-			return List.of();
-		}
-
-		final Path responseFile = EmulationPathHelper.resolveSecurely(wbemDir, responseFileName);
-		if (responseFile == null) {
-			return List.of();
-		}
-		try {
-			final String content = Files.readString(responseFile, StandardCharsets.UTF_8);
-			return SourceTable.csvToTable(content, MetricsHubConstants.TABLE_SEP);
-		} catch (Exception e) {
-			log.error(
-				"Hostname {} - Failed to read WBEM emulation response file {}. Error: {}",
-				hostname,
-				responseFile,
-				e.getMessage()
-			);
-			log.debug("Hostname {} - WBEM emulation response read error:", hostname, e);
-			return List.of();
-		}
 	}
 
+	/**
+	 * Finds emulation entries that match the given query and namespace.
+	 *
+	 * @param entries    list of emulation entries to search
+	 * @param query      WQL query to match
+	 * @param namespace  namespace to match
+	 * @return list of matching emulation entries, or empty list if no matches found
+	 */
 	List<WbemEmulationEntry> findMatchingEntries(
 		final List<WbemEmulationEntry> entries,
 		final String query,
@@ -168,7 +169,7 @@ public class EmulationWbemRequestExecutor extends WbemRequestExecutor {
 
 				final String requestWql = entry.getRequest().getWql();
 				final String requestNamespace = entry.getRequest().getNamespace();
-				return query.equals(requestWql) && namespace.equalsIgnoreCase(requestNamespace);
+				return query.equals(requestWql) && namespace.equals(requestNamespace);
 			})
 			.collect(Collectors.toCollection(ArrayList::new));
 	}
